--- a/about.html
+++ b/about.html
@@ -10,8 +10,71 @@
 <link rel="stylesheet" href="assets/style/main.css">
 <title>Jackson Fales - About</title>
 </head>
-<body>
+<body class="bg-black">
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-lg bg-black navbar-dark py-3 fixed-top">
+        <div class="container w-75 px-0">
+            <a href="index.html" class="navbar-brand display-1">Jackson Fales</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-links">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nav-links">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item px-2">
+                        <a href="projects.html" class="nav-link">Projects</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a href="about.html" class="nav-link active" title="You are here.">About</a>
+                    </li>
+                    <li class="nav-item ps-2">
+                        <a href="form.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="bg-black text-dark text-nowrap py-2 my-1">this is a hidden spacer :)</div>
 
+    <section id="content">
+        <div class="container-fluid w-75 px-0">
+            <h1 class="text-center text-white mt-4 mb-4"><b>ABOUT ME</b></h1>
+        </div>
+        <div class="container-fluid w-75 px-0">
+            <!-- ROW 1 -->
+            <div class="d-lg-flex flex-sm-row align-items-start justify-content-evenly mb-4">
+                <div class="col-lg-6 col-md-12 px-2 mb-3">
+                    <h3 class="text-white text-center">Background</h3>
+                    <p class="m-2 text-secondary p-indented">
+                        My name is Jackson Fales. I was born on May 21, 2001, and I live in Richmond, Virginia. I'm not the most tech-obsessed by any means, but I've been interested in computers for as long as I can remember. I built my first PC when I was 13, and I was introduced to programming by MIT's Scratch software a bit earlier than that.
+                    </p>
+                </div>
+                <div class="col-lg-6 col-md-12 px-2 mb-3">
+                    <h3 class="text-white text-center">Interests</h3>
+                    <p class="m-2 text-secondary p-indented">
+                        I have many interests, most of them revolving around video games (which I play too much of) and game development. I dabble in digital art like video editing, 3D animation, and illustration. Outside of the digital realm, I'm very into the gym, specifically weightlifting. I also like to snowboard and wakeboard when I get the chance, but that's not too often.
+                    </p>
+                </div>
+            </div>
+            <!-- ROW 2 -->
+            <div class="d-xl-flex flex-md-row-reverse align-items-center justify-content-evenly mb-4">
+                <div class="col-xl-6 col-lg-12 px-2 mb-3">
+                    <h3 class="text-white text-center">Education</h3>
+                    <p class="m-2 text-secondary p-indented">
+                        I graduated from Deep Run High School as part of the school's specialty program, the Center for Information Technology, CIT for short. Through the program I learned many skills related to hardware and software, gaining experience with languages like Java, Python, JavaScript, HTML and CSS, with more limited experience with things like SQL, Jinja, and Flask. I also gained experience with the business side of IT, learning about project management processes like SCRUM and AGILE. I also briefly took part in a web development internship during the summer prior to my Senior year.   
+                    </p>
+                    <p class="m-2 text-secondary p-indented">
+                        I also have some experience with college. I took four semesters at Virginia Tech, entering the school intending to study some form of computer science, but eventually switching to a program focused on digital arts after being intimidated by the rigor required by the prestigious engineering school the university's computer science program was run by. The new program felt like a good fit; still, after two years of struggling to adjust to the workload of college, navigating chronic personal mental health issues, and later having to deal with the unexpected added complexities of schooling in a world beset by COVID-19, I decided college wasn't currently right for me and withdrew. Perhaps one day I'll return, but for now I can't say. 
+                    </p>
+                    <p class="m-2 text-secondary p-indented">
+                        Now, I'm focused on returning to and honing those skills I learned in my time at high school in the CIT, getting a certification with Coding Temple, and hopefully starting a career in software development.
+                    </p>
+                </div>
+                <div class="col-xl-6 col-lg-12 px-2">
+                    <img src="assets/img/DeepRun.jpg" alt="The front entrance of Deep Run High School." class="img-fluid d-flex mx-auto rounded">
+                </div>
+            </div>
+        </div>
+    </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
